finalizando apartado de tienda + modo oscuro

--- a/html/formContact.html
+++ b/html/formContact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/init.css" />
     <link rel="stylesheet" href="../css/form.css" />
+    <link rel="stylesheet" href="../css/shop.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -39,7 +40,7 @@
         <label for="name">Nombre</label>
         <input type="text" name="name" required />
 
-        <label for="email">Correo</label>
+        <label for="email">Correo electrónico</label>
         <input type="email" name="email" required />
 
         <label for="message">Mensaje</label><br />
