--- a/html/init.html
+++ b/html/init.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/init.css" />
+    <link rel="stylesheet" href="../css/shop.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -11,6 +12,11 @@
     <title>Inicio - Pastelería DulceLand</title>
   </head>
   <body>
+    <!--offerts -->
+    <div class="offer-text-container">
+      <span>¡Oferta en todos nuestros productos sin gluten!</span>
+    </div>
+    
     <!-- Banner -->
     <header class="banner">
       <img src="../img/banner.png" alt="Pastelería DulceLand" />
@@ -72,7 +78,7 @@
       <div class="gallery">
         <div class="product">
           <img src="../img/masa.jpg" alt="Productos de calidad" />
-          <p>Productos de artesanos</p>
+          <p>Productos artesanos</p>
         </div>
         <div class="product">
           <img src="../img/bizum.jpg" alt="Entrega rápida" />
@@ -108,6 +114,6 @@
         ></a>
       </a>
       </div>
-    </footer>
+    </footer>  
   </body>
 </html>
