--- a/html/map.html
+++ b/html/map.html
@@ -8,6 +8,11 @@
   <title>Iniciar sesión - Pastelería Dulce Sueño</title>
 </head>
 <body>
+    <!--offerts -->
+    <div class="offer-text-container">
+        <span>¡Oferta en todos nuestros productos sin gluten!</span>
+      </div>
+      
   <!-- Banner -->
   <header class="banner">
     <img src="../img/banner.png" alt="Pastelería DulceLand" />
