implentacion modo oscuro en apartados

--- a/html/formContact.html
+++ b/html/formContact.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <script src="../js/darkMode.js" defer></script>
     <title>Contacto - Pastelería DulceLand</title>
   </head>
   <body>
@@ -29,6 +30,9 @@
           <li><a href="formContact.html">Contacto</a></li>
           <li><a href="map.html">¿Dónde encontrarnos?</a></li>
           <li><a href="faq.html">Preguntas frecuentes</a></li>
+          <span id="toggleDarkMode" class="dark-icon">
+            <i class="fas fa-moon"></i>
+          </span>
         </ul>
       </nav>
     </div>
