--- a/html/faq.html
+++ b/html/faq.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="../css/init.css" />
     <link rel="stylesheet" href="../css/shop.css" />
     <link rel="stylesheet" href="../css/faq.css" />
-    <link
+        <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <script src="../js/darkMode.js" defer></script>
+
     <title>Preguntas frecuentes - Pastelería DulceLand</title>
   </head>
   <body>
@@ -27,13 +29,16 @@
     <div class="menu">
       <nav class="navegacion">
         <ul>
-          <li><a href="init.html">Inicio</a></li>
-          <li><a href="shop.html">Tienda</a></li>
-          <li><a href="login.html">Inicio de sesión</a></li>
-          <li><a href="register.html">Registro</a></li>
-          <li><a href="formContact.html">Contacto</a></li>
-          <li><a href="map.html">¿Dónde encontrarnos?</a></li>
-          <li><a href="faq.html">Preguntas frecuentes</a></li>
+            <li><a href="init.html">Inicio</a></li>
+            <li><a href="shop.html">Tienda</a></li>
+            <li><a href="login.html">Inicio de sesión</a></li>
+            <li><a href="register.html">Registro</a></li>
+            <li><a href="formContact.html">Contacto</a></li>
+            <li><a href="map.html">¿Dónde encontrarnos?</a></li>
+            <li><a href="faq.html">Preguntas frecuentes</a></li>
+            <span id="toggleDarkMode" class="dark-icon">
+              <i class="fas fa-moon"></i>
+            </span>
         </ul>
       </nav>
     </div>
