--- a/html/init.html
+++ b/html/init.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/init.css" />
     <link rel="stylesheet" href="../css/shop.css" />
-    <link
+       <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <script src="../js/darkMode.js" defer></script>
+
     <title>Inicio - Pastelería DulceLand</title>
   </head>
   <body>
@@ -22,20 +24,24 @@
       <img src="../img/banner.png" alt="Pastelería DulceLand" />
     </header>
 
-    <!-- Navbar -->
-    <div class="menu">
-      <nav class="navegacion">
-        <ul>
-          <li><a href="init.html">Inicio</a></li>
-          <li><a href="shop.html">Tienda</a></li>
-          <li><a href="login.html">Inicio de sesión</a></li>
-          <li><a href="register.html">Registro</a></li>
-          <li><a href="formContact.html">Contacto</a></li>
-          <li><a href="map.html">¿Dónde encontrarnos?</a></li>
-          <li><a href="faq.html">Preguntas frecuentes</a></li>
-        </ul>
-      </nav>
-    </div>
+   <!-- Navbar -->
+<div class="menu">
+  <nav class="navegacion">
+    <ul>
+      <li><a href="init.html">Inicio</a></li>
+            <li><a href="shop.html">Tienda</a></li>
+            <li><a href="login.html">Inicio de sesión</a></li>
+            <li><a href="register.html">Registro</a></li>
+            <li><a href="formContact.html">Contacto</a></li>
+            <li><a href="map.html">¿Dónde encontrarnos?</a></li>
+            <li><a href="faq.html">Preguntas frecuentes</a></li>
+            <span id="toggleDarkMode" class="dark-icon">
+              <i class="fas fa-moon"></i>
+            </span>
+    </ul>
+  </nav>
+</div>
+
 
     <!-- promotional products section -->
     <section class="featured-products">
