creacion de cuadro adicional en tienda

--- a/html/init.html
+++ b/html/init.html
@@ -16,7 +16,7 @@
   <body>
     <!--offerts -->
     <div class="offer-text-container">
-      <span>¡Oferta en todos nuestros productos sin gluten!</span>
+      <span>¡Oferta en todos nuestros productos sin gluten! ¡Haz tu pedido!</span>
     </div>
     
     <!-- Banner -->
