cambios en html

--- a/html/init.html
+++ b/html/init.html
@@ -95,8 +95,8 @@
     <section class="horary">
       <h2>Horarios</h2>
       <div class="timeTable">
-        <p>Lunes - viernes: 9:30–13:30, 17:00–20:00</p>
-        <p>Sábado: 10:00-13:30</p>
+        <p>Lunes - viernes: 9:30 – 13:30 / 17:00 – 20:00</p>
+        <p>Sábado: 10:00 - 13:30</p>
         <p>Domingo: Cerrado</p>
       </div>
     </section>
