--- a/html/map.html
+++ b/html/map.html
@@ -48,8 +48,8 @@
     <p><i class="fas fa-phone-alt"></i> Teléfono: 954 123 456</p>
     <p><i class="fas fa-clock"></i> Horario de apertura:</p>
     <ul>
-      <li>Lunes a Viernes: 08:30 - 14:00 / 17:00 - 20:30</li>
-      <li>Sábado: 09:00 - 14:30</li>
+      <li>Lunes - viernes: 9:30 – 13:30 / 17:00 – 20:00</li>
+      <li>Sábado: 10:00 - 13:30</li>
       <li>Domingo: Cerrado</li>
     </ul>
   </div>
