--- a/html/register.html
+++ b/html/register.html
@@ -20,10 +20,11 @@
         <nav class="navegacion">
           <ul>
             <li><a href="init.html">Inicio</a></li>
-            <li><a href="tienda.html">Tienda</a></li>
-            <li><a href="login.html">Inicio Sesión</a></li>
+            <li><a href="shop.html">Tienda</a></li>
+            <li><a href="login.html">Inicio de sesión</a></li>
             <li><a href="register.html">Registro</a></li>
             <li><a href="formContact.html">Contacto</a></li>
+            <li><a href="map.html">¿Dónde encontrarnos?</a></li>
             <li><a href="faq.html">Preguntas frecuentes</a></li>
           </ul>
         </nav>
