--- a/html/register.html
+++ b/html/register.html
@@ -19,21 +19,7 @@
       <img src="../img/banner.png" alt="Pastelería DulceLand" />
     </header>
 
-<<<<<<< HEAD
-      <div class="menu">
-        <nav class="navegacion">
-          <ul>
-            <li><a href="init.html">Inicio</a></li>
-            <li><a href="shop.html">Tienda</a></li>
-            <li><a href="login.html">Inicio de sesión</a></li>
-            <li><a href="register.html">Registro</a></li>
-            <li><a href="formContact.html">Contacto</a></li>
-            <li><a href="map.html">¿Dónde encontrarnos?</a></li>
-            <li><a href="faq.html">Preguntas frecuentes</a></li>
-          </ul>
-        </nav>
-      </div>
-=======
+    <!--NAVBAR-->
     <div class="menu">
       <nav class="navegacion">
         <ul>
@@ -50,7 +36,6 @@
         </ul>
       </nav>
     </div>
->>>>>>> origin/monica
 
     <!-- Registro -->
     <main class="contenido">
