--- a/html/init.html
+++ b/html/init.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/init.css" />
-<<<<<<< HEAD
-    <link
-=======
     <link rel="stylesheet" href="../css/shop.css" />
-       <link
->>>>>>> origin/monica
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
     <script src="../js/darkMode.js" defer></script>
 
     <title>Inicio - Pastelería DulceLand</title>
