--- a/html/register.html
+++ b/html/register.html
@@ -38,23 +38,29 @@
     </div>
 
     <!-- Registro -->
-    <main class="contenido">
-      <div class="form-container">
-        <h2>Registro de usuario</h2>
-        <form action="../connection/controller.php" method="POST">
-          <label for="name">Nombre</label>
-          <input type="text" name="name" required />
+    <!-- Registro -->
+<main class="contenido">
+  <div class="form-container">
+    <h2>Registro de usuario</h2>
+    
+    <form action="../connection/controller.php" method="POST">
+      <!-- Campo oculto para identificar el registro en PHP -->
+      <input type="hidden" name="register" value="1">
 
-          <label for="email">Correo</label>
-          <input type="email" name="email" required />
+      <label for="name">Nombre</label>
+      <input type="text" id="name" name="name" required />
 
-          <label for="password">Contraseña</label>
-          <input type="password" name="password" required />
+      <label for="email">Correo</label>
+      <input type="email" id="email" name="email" required />
 
-          <button type="submit" name="register">Registrarse</button>
-        </form>
-      </div>
-    </main>
+      <label for="password">Contraseña</label>
+      <input type="password" id="password" name="password" required />
+
+      <button type="submit">Registrarse</button>
+    </form>
+  </div>
+</main>
+
 
     <!-- Footer -->
     <footer>
