--- a/html/login.html
+++ b/html/login.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/init.css" />
-    <link rel="stylesheet" href="../css/shop.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <script src="../js/darkMode.js" defer></script>
-    <title>Iniciar sesión - Pastelería Dulce Sueño</title>
-  </head>
-  <body>
-    <!-- Banner -->
-    <header class="banner">
-      <img src="../img/banner.png" alt="Pastelería DulceLand" />
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../css/init.css" />
+  <link rel="stylesheet" href="../css/shop.css" />
+  <link rel="stylesheet" href="../css/login.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <script src="../js/darkMode.js" defer></script>
+  <title>Iniciar sesión - Pastelería Dulce Sueño</title>
+</head>
+<body>
+
+  <!-- Banner -->
+  <header class="banner">
+    <img src="../img/banner.png" alt="Pastelería DulceLand" />
+  </header>
 
   <!-- Navbar -->
   <div class="menu">
@@ -34,14 +32,18 @@
     </nav>
   </div>
 
-  <!-- Formulario de login -->
+  <!-- Formulario de login CORRECTO -->
   <div class="login-container">
     <h2>Inicio de sesión</h2>
-    <form action="../connection/controller.php" method="post">
+    <form action="../connection/controller.php" method="POST">
+      <input type="hidden" name="login" value="1">
+
       <label for="email">Correo</label>
-      <input type="email" name="email" required />
+      <input type="email" id="email" name="email" required />
+
       <label for="password">Contraseña</label>
-      <input type="password" name="password" required />
+      <input type="password" id="password" name="password" required />
+
       <button type="submit">Iniciar sesión</button>
     </form>
   </div>
@@ -53,51 +55,9 @@
       <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
       <a href="https://www.telegram.org" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-
-    <!-- Navbar -->
-    <div class="menu">
-      <nav class="navegacion">
-        <ul>
-          <li><a href="init.html">Inicio</a></li>
-          <li><a href="shop.html">Tienda</a></li>
-          <li><a href="login.html">Inicio de sesión</a></li>
-          <li><a href="register.html">Registro</a></li>
-          <li><a href="formContact.html">Contacto</a></li>
-          <li><a href="map.html">¿Dónde encontrarnos?</a></li>
-          <li><a href="faq.html">Preguntas frecuentes</a></li>
-          <span id="toggleDarkMode" class="dark-icon">
-            <i class="fas fa-moon"></i>
-          </span>
-        </ul>
-      </nav>
     </div>
+  </footer>
 
-    <!-- Formulario de login -->
-    <div class="login-container">
-      <h2>Inicio de sesión</h2>
-      <form action="../connection/controller.php" method="post">
-        <label for="email">Correo</label>
-        <input type="email" name="email" required />
-        <label for="password">Contraseña</label>
-        <input type="password" name="password" required />
-        <button type="submit">Iniciar sesión</button>
-      </form>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2025 Pastelería DulceLand - Todos los derechos reservados</p>
-      <div class="rrss">
-        <a href="https://www.instagram.com" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="https://www.tiktok.com" target="_blank"
-          ><i class="fab fa-tiktok"></i
-        ></a>
-        <a href="https://www.telegram.org" target="_blank"
-          ><i class="fab fa-telegram-plane"></i
-        ></a>
-      </div>
-    </footer>
-  </body>
+</body>
 </html>
+
