--- a/html/map.html
+++ b/html/map.html
@@ -18,16 +18,20 @@
     <img src="../img/banner.png" alt="Pastelería DulceLand" />
   </header>
 
-  <!-- Navbar -->
-  <div class="menu">
+   <!-- Navbar -->
+   <div class="menu">
     <nav class="navegacion">
       <ul>
         <li><a href="init.html">Inicio</a></li>
         <li><a href="shop.html">Tienda</a></li>
-        <li><a href="login.html">Inicio sesión</a></li>
+        <li><a href="login.html">Inicio de sesión</a></li>
         <li><a href="register.html">Registro</a></li>
         <li><a href="formContact.html">Contacto</a></li>
+        <li><a href="map.html">¿Dónde encontrarnos?</a></li>
         <li><a href="faq.html">Preguntas frecuentes</a></li>
+        <span id="toggleDarkMode" class="dark-icon">
+          <i class="fas fa-moon"></i>
+        </span>
       </ul>
     </nav>
   </div>
