arreglado footer en pedidos

--- a/html/orders.html
+++ b/html/orders.html
@@ -47,14 +47,16 @@
 
     <!--footer -->
     <footer>
-      <p>&copy; 2025 Pastelería DulceLand - Todos los derechos reservados</p>
-      <div class="rrss">
-        <a href="https://www.instagram.com/" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.tiktok.com/" target="_blank">
-          <i class="fab fa-tiktok"></i>
-        </a>
+      <div class="footer-content">
+        <p>&copy; 2025 Pastelería DulceLand - Todos los derechos reservados</p>
+        <div class="rrss">
+          <a href="https://www.instagram.com/" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.tiktok.com/" target="_blank">
+            <i class="fab fa-tiktok"></i>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
