--- a/html/init.html
+++ b/html/init.html
@@ -26,7 +26,7 @@
   <nav class="navegacion">
     <ul>
       <li><a href="init.html">Inicio</a></li>
-            <li><a href="shop.html">Tienda</a></li>
+      <li><a href="shop.php">Tienda</a></li>
             <li><a href="login.html">Inicio de sesión</a></li>
             <li><a href="register.html">Registro</a></li>
             <li><a href="formContact.html">Contacto</a></li>
