--- a/html/users.html
+++ b/html/users.html
@@ -21,7 +21,7 @@
     <div class="menu">
       <nav class="navegacion">
         <ul>
-          <li><a href="shop.html">Tienda</a></li>
+          <li><a href="shop.php">Tienda</a></li>
           <li><a href="login.html">Inicio de sesión</a></li>
           <li><a href="register.html">Registro</a></li>
           <li><a href="formContact.html">Contacto</a></li>
