--- a/html/orders.html
+++ b/html/orders.html
@@ -24,20 +24,21 @@
     <div class="menu">
       <nav class="navegacion">
         <ul>
-          <li><a href="init.html">Inicio</a></li>
-          <li><a href="shop.html">Tienda</a></li>
+          <li><a href="shop.php">Tienda</a></li>
           <li><a href="login.html">Inicio de sesión</a></li>
           <li><a href="register.html">Registro</a></li>
           <li><a href="formContact.html">Contacto</a></li>
           <li><a href="map.html">¿Dónde encontrarnos?</a></li>
           <li><a href="faq.html">Preguntas frecuentes</a></li>
-          <span id="toggleDarkMode" class="dark-icon">
-            <i class="fas fa-moon"></i>
-          </span>
+          <div class="menu-actions">
+            <span id="toggleDarkMode" class="dark-icon">
+              <i class="fas fa-moon"></i>
+            </span>
+            <a href="init.html" class="logout">Cerrar sesión</a>
+          </div>
         </ul>
       </nav>
     </div>
-
     <!--main content-->
     <div class="main-content">
       <h1>Panel de usuario</h1>
@@ -47,16 +48,14 @@
 
     <!--footer -->
     <footer>
-      <div class="footer-content">
-        <p>&copy; 2025 Pastelería DulceLand - Todos los derechos reservados</p>
-        <div class="rrss">
-          <a href="https://www.instagram.com/" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://www.tiktok.com/" target="_blank">
-            <i class="fab fa-tiktok"></i>
-          </a>
-        </div>
+      <p>&copy; 2025 Pastelería DulceLand - Todos los derechos reservados</p>
+      <div class="rrss">
+        <a href="https://www.instagram.com/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.tiktok.com/" target="_blank">
+          <i class="fab fa-tiktok"></i>
+        </a>
       </div>
     </footer>
   </body>
