--- a/html/users.html
+++ b/html/users.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/init.css" />
     <link rel="stylesheet" href="../css/users.css" />
     <link rel="stylesheet" href="../css/shop.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="../js/orders.js" defer></script>
     <script src="../js/darkMode.js" defer></script>
     <title>Mis pedidos - Pastelería DulceLand</title>
@@ -17,8 +17,8 @@
       <img src="../img/banner.png" alt="Pastelería DulceLand" />
     </header>
 
-    <!-- Navbar -->
-    <div class="menu">
+     <!-- Navbar -->
+     <div class="menu">
       <nav class="navegacion">
         <ul>
           <li><a href="shop.php">Tienda</a></li>
@@ -36,6 +36,7 @@
         </ul>
       </nav>
     </div>
+
 
     <!--main content -->
     <div class="main-content">
