--- a/html/orders.html
+++ b/html/orders.html
@@ -24,6 +24,7 @@
     <div class="menu">
       <nav class="navegacion">
         <ul>
+          <li><a href="init.html">Inicio</a></li>
           <li><a href="shop.php">Tienda</a></li>
           <li><a href="login.html">Inicio de sesión</a></li>
           <li><a href="register.html">Registro</a></li>
